# adaptive-market-maker

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: methodology.md
mm/: __init__.py  adversity.py  backtest.py  data.py  externalization.py  metrics.py  model.py  quoting.py
scripts/: generate_data.py  run_pipeline.py
tests/: test_mm.py
